feat(server): logging and tracing for endpoints
